test/testdata/while/continue_inside_nested_function_error.lox
while (true) {
    fun c() {
        continue; // error: 'continue' can only be used inside a loop
    }
    c();
    break;
}
